Fix mobile layout breaks

--- a/components/footer/footer.module.scss
+++ b/components/footer/footer.module.scss
@@ -66,6 +66,12 @@
       height: 287px;
     }
   }
+  @media screen and (max-width: 287px) {
+    .circle {
+      width: 95vw;
+      height: 95vw;
+    }
+  }
 }
 
 .footer-wrapper-top {
