--- a/components/post-header-info/post-header-info.module.scss
+++ b/components/post-header-info/post-header-info.module.scss
@@ -8,7 +8,7 @@
 
   .post-info {
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 20px;
   }
 }
 
